Fix bug related to dark mode

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -647,24 +647,16 @@ body {
   margin-right: auto;
 }
 
-.-mt-1 {
-  margin-top: -0.25rem;
-}
-
 .mb-1 {
   margin-bottom: 0.25rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .line-clamp-2 {
@@ -704,18 +696,6 @@ body {
 
 .h-8 {
   height: 2rem;
-}
-
-.max-h-96 {
-  max-height: 24rem;
-}
-
-.max-h-9 {
-  max-height: 2.25rem;
-}
-
-.max-h-80 {
-  max-height: 20rem;
 }
 
 .max-h-60 {
@@ -823,10 +803,6 @@ body {
   border-color: rgb(243 244 246 / var(--tw-divide-opacity));
 }
 
-.overflow-scroll {
-  overflow: scroll;
-}
-
 .overflow-y-scroll {
   overflow-y: scroll;
 }
@@ -879,10 +855,6 @@ body {
   background-color: rgb(255 255 255 / 0.2);
 }
 
-.p-5 {
-  padding: 1.25rem;
-}
-
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -898,21 +870,8 @@ body {
   padding-bottom: 1.25rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .pb-\[27px\] {
   padding-bottom: 27px;
-}
-
-.pt-\[21px\] {
-  padding-top: 21px;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
 }
 
 .pl-5 {
@@ -921,6 +880,10 @@ body {
 
 .pr-5 {
   padding-right: 1.25rem;
+}
+
+.pt-\[21px\] {
+  padding-top: 21px;
 }
 
 .font-Dana {
@@ -1117,4 +1080,10 @@ body {
 :is(.dark .dark\:text-white) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1280px) {
+  .xl\:inline-block {
+    display: inline-block;
+  }
 }
